fix: hide scrollbar

--- a/src/app/blocked/dashboard/lastest-release/lastest-release.component.css
+++ b/src/app/blocked/dashboard/lastest-release/lastest-release.component.css
@@ -25,6 +25,9 @@
         max-height: 35vh;
         width: 58vw;
         overflow: auto;
-        
+        scrollbar-width: none;      
+    }
+    .card--height::-webkit-scrollbar{
+        display: none
     }
 }
